# Fieldnotes

./: .env.example  .gitignore  BUILDING.md  LICENSE  LICENSE.MIT  NOTICE  README.md  package-lock.json  package.json  scenarios-v0.5.1.md
.github/workflows/: build-release.yml
dna/v1.1/zomes/polls/coordinator/src/: lib.rs
dna/v1.3/: Cargo.toml  build.sh
dna/v1.3/workdir/: dna.yaml  fieldnotes_v1_3.dna  happ.yaml  polls_integrity.wasm  proofpoll_v1_3.dna  proofpoll_v1_3_happ.happ
dna/v1.3/zomes/polls/coordinator/src/: lib.rs
dna/v1.3/zomes/polls/integrity/: Cargo.toml
dna/v1.3/zomes/polls/integrity/src/: lib.rs
dna/zomes/polls/coordinator/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: fieldnotes_v1_3_happ.happ  proofpoll_v1_3_happ.happ
src-tauri/scripts/: sign-windows.ps1
src-tauri/src/: commands.rs  conductor.rs  crypto.rs  dna.rs  lair.rs  lib.rs  migration.rs  process_ext.rs  sidecar.rs
src/lib/: holochain.ts  private-data.ts  sanitize.ts  signin.ts  window.ts
src/routes/: index.tsx  layout.tsx
src/routes/admin/: index.tsx
src/routes/create/: index.tsx
src/routes/drafts/: index.tsx
src/routes/identity/: index.tsx
src/routes/import/: index.tsx
src/routes/poll/: index.tsx
src/routes/poll/[id]/: index.tsx
src/routes/report/: index.tsx
tests/sweettest/: Cargo.toml
tests/sweettest/src/: lib.rs
tests/sweettest/tests/: attachment_loop.rs  crypto_cohort.rs  progenitor_gate.rs
