[package]
name = "proofpoll"
version = "0.1.0"
description = "ProofPoll - Verified polls with Flowsta identity linking"
authors = ["ProofPoll"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }

# Lair keystore client API. Holochain 0.6.1 pins lair_keystore_api to exactly
# 0.6.3 — match it so the bundled lair-keystore binary (0.6.3) and this
# client can never drift.
lair_keystore_api = "=0.6.3"

# Holochain conductor client (AdminWebsocket + AppWebsocket). Conductor 0.6.1
# → Rust client 0.8.1 (released 2026-05-12 for Holochain 0.6.1).
holochain_client = { version = "=0.8.1", default-features = false }
holochain_types = "=0.6.1"

# Error handling
thiserror = "1.0"

# Random passphrase generation
rand = "0.8"

# Msgpack decoding for entry types
rmp-serde = "1"

# Base64 for signature decoding
base64 = "0.22"

# HTTP client for IPC notifications to Vault
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Process liveness check
libc = "0.2"
