[package]
name = "fieldnotes_sweettest"
version = "0.1.0"
edition = "2021"

# NOT compiled to WASM. Uses holochain's test_utils feature to run Sweettest
# in-process against the compiled .dna bundle.
#
# IMPORTANT: run with CARGO_TARGET_DIR=target/native-tests to avoid artifact
# conflicts with the wasm32-unknown-unknown build directory.
#
# Prerequisite: the .dna must be built first (cd dna/v1.3 && bash build.sh).
#
# Version pins mirror R&O's proven sweettest workspace (hdk 0.6.0 / hdi 0.7.0
# / holochain 0.6.0 with test_utils) — the same stack Fieldnotes' zomes use.

[lib]
name = "fieldnotes_sweettest"
path = "src/lib.rs"

[dependencies]
holochain = { version = "=0.6.0", features = ["test_utils"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
holochain_serialized_bytes = "*"
serde_yaml = "0.9"

[[test]]
name = "crypto_cohort"
path = "tests/crypto_cohort.rs"

[[test]]
name = "attachment_loop"
path = "tests/attachment_loop.rs"

[[test]]
name = "progenitor_gate"
path = "tests/progenitor_gate.rs"
